--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div style="text-align:center">
       <h1>Adobe test site</h1>
-      <a href="#sfsiplusid_facebook">Facebook Link Test</a>
+      <a href="#" id="sfsiplusid_facebook">Facebook Link Test</a>
     </div>
   </body>
 </html>
