--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div style="text-align:center">
       <h1>Adobe test site</h1>
       <a href="#" id="sfsiplusid_facebook">Facebook Link Test</a>
+      <a href="#" id="sfsiplusid_twitter">Twitter Link Test</a>
+      <a href="#" id="sfsiplusid_youtube">Youtube Link Test</a>
     </div>
   </body>
 </html>
