--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
       <a href="#" id="sfsiplusid_twitter">Twitter Link Test</a>
       <a href="#" id="sfsiplusid_youtube">Youtube Link Test</a>
     </div>
+    <div>
+      <a class="star-1" href="#">1</a>
+      <a class="star-2" href="#">2</a>
+      <a class="star-3 active" href="#">3</a>
+      <a class="star-4" href="#">4</a>
+      <a class="star-5" href="#">5</a>
+    </div> 
   </body>
 </html>
