--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <!--Launch Header Embed Code-->
     <script src="//assets.adobedtm.com/launch-EN684fc6ea7c9b4184911beaa0c7241538-development.min.js" async></script>
     <!--/Launch Header Embed Code-->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous">
+    </script>
     <meta charset="utf-8">
     <title>Adobe Perishopix Test</title>
   </head>
