--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!--Launch Header Embed Code-->
     <script src="//assets.adobedtm.com/launch-EN684fc6ea7c9b4184911beaa0c7241538-development.min.js" async></script>
     <!--/Launch Header Embed Code-->
-    <script
+    <script>
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous">
